--- a/1-electron-hello-world/package.json
+++ b/1-electron-hello-world/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "application menu",
+    "name": "hello world",
     "version": "1.0.0",
     "main": "main.js",
     "dependencies": {
